NULL =

SUBDIRS = \
	fastvapi \
	girwriter \
	gtktemplate \
	$(NULL)

AM_CPPFLAGS = \
	$(GLIB_CFLAGS) \
	$(NULL)
AM_LDFLAGS = \
	$(GLIB_LIBS) \
	$(NULL)

BUILT_SOURCES = \
	$(NULL)
noinst_PROGRAMS = \
	$(NULL)

TEST_EXTENSIONS = .bala .gs .test

TEST_RUNNER = $(abs_top_srcdir)/build-aux/testrunner.sh
BALA_LOG_COMPILER = $(TEST_RUNNER)
GS_LOG_COMPILER = $(TEST_RUNNER)
TEST_LOG_COMPILER = $(TEST_RUNNER)

AM_TESTS_ENVIRONMENT = \
	export EXEEXT=$(EXEEXT); \
	export CFLAGS='$(CFLAGS)'; \
	export CPPFLAGS='$(CPPFLAGS)'; \
	export LDFLAGS='$(LDFLAGS)'; \
	export TEST_CFLAGS='$(TEST_CFLAGS)'; \
	export abs_top_srcdir='$(abs_top_srcdir)'; \
	export abs_top_builddir='$(abs_top_builddir)'; \
	export abs_srcdir='$(abs_srcdir)'; \
	export abs_builddir='$(abs_builddir)'; \
	export CC='$(CC)';

TESTS = \
	basic-types/integers.bala \
	basic-types/integers-boxed-cast.bala \
	basic-types/escape-chars.bala \
	basic-types/floats.bala \
	basic-types/floats-boxed-cast.bala \
	basic-types/boolean.bala \
	basic-types/custom-types.bala \
	basic-types/default-gtype.bala \
	basic-types/strings.bala \
	basic-types/arrays.bala \
	basic-types/arrays-generics.bala \
	basic-types/arrays-fixed-assignment.bala \
	basic-types/array-uint8-uchar-compat.bala \
	basic-types/pointers.bala \
	basic-types/pointers-arithmetic.bala \
	basic-types/sizeof.bala \
	basic-types/garray.bala \
	basic-types/glists.bala \
	basic-types/gptrarray.bala \
	basic-types/gvariants.bala \
	basic-types/gvariants-hashtable-missing-type-arguments.test \
	basic-types/gvariants-unboxing-safe.bala \
	basic-types/null.bala \
	basic-types/bug570846.test \
	basic-types/bug571486.bala \
	basic-types/bug591552.bala \
	basic-types/bug595751.bala \
	basic-types/bug596637.bala \
	basic-types/bug596785.bala \
	basic-types/bug604371.bala \
	basic-types/bug604589.test \
	basic-types/bug610660.bala \
	basic-types/bug622178.bala \
	basic-types/bug632322.bala \
	basic-types/bug641308.test \
	basic-types/bug643612.bala \
	basic-types/bug644046.bala \
	basic-types/bug647222.bala \
	basic-types/bug648364.bala \
	basic-types/bug650993.bala \
	basic-types/bug652380.bala \
	basic-types/bug655908.bala \
	basic-types/bug659975.bala \
	basic-types/bug678791.bala \
	basic-types/bug686336.bala \
	basic-types/bug729907.bala \
	basic-types/bug731017.bala \
	basic-types/bug744923.test \
	basic-types/bug756376.bala \
	basic-types/bug761307.bala \
	basic-types/bug761736.bala \
	basic-types/bug771626.test \
	basic-types/bug772426.bala \
	basic-types/bug777697.test \
	basic-types/bug787152.bala \
	basic-types/bug788775.bala \
	constants/array-type-invalid.test \
	constants/glog.bala \
	constants/strings.bala \
	namespace/unique.bala \
	arrays/cast-silent-invalid.test \
	arrays/cast-struct-boxed-element-access.bala \
	arrays/class-field-initializer.bala \
	arrays/class-field-length-cname.bala \
	arrays/constant-element-access.bala \
	arrays/empty-length-0.bala \
	arrays/expression-bracket.test \
	arrays/fixed-length-init0-not-allowed.bala \
	arrays/field-global-length-cname.bala \
	arrays/fixed-length-concat-invalid.test \
	arrays/fixed-length-enum-value.bala \
	arrays/fixed-length-non-const.test \
	arrays/fixed-length-resize-invalid.test \
	arrays/inline-field.test \
	arrays/inline-local-instantiation.test \
	arrays/inline-local-variable.test \
	arrays/inline-ownership-transfer.test \
	arrays/inline-parameter.test \
	arrays/inline-struct.bala \
	arrays/inline-struct-field.test \
	arrays/in-operator-with-boxed-needle.bala \
	arrays/length-inline-assignment.bala \
	arrays/length-type-include.bala \
	arrays/length-no-int-type.test \
	arrays/struct-field-length-cname.bala \
	arrays/struct-field-initializer.bala \
	arrays/struct-namespaced-initializer.bala \
	arrays/incompatible-integer-elements.test \
	arrays/resize.bala \
	arrays/resize-local-size.bala \
	arrays/resize-local-size-captured.bala \
	arrays/resize-unowned-invalid.test \
	arrays/resize-unowned-invalid-2.test \
	arrays/resize-unowned-invalid-3.test \
	arrays/slice-fixed-length.bala \
	arrays/slice-invalid-start.test \
	arrays/slice-invalid-stop.test \
	arrays/slice-no-array.test \
	chainup/base-class-invalid.test \
	chainup/base-enum-invalid.test \
	chainup/base-invalid.test \
	chainup/base-struct-invalid.test \
	chainup/class-base.bala \
	chainup/class-base-foo.bala \
	chainup/class-compact-base.bala \
	chainup/class-compact-this.bala \
	chainup/class-object.bala \
	chainup/class-this.bala \
	chainup/class-this-foo.bala \
	chainup/method-lambda-base.bala \
	chainup/no-chainup.bala \
	chainup/signal-default-handler.bala \
	chainup/struct-base.bala \
	chainup/struct-base-foo.bala \
	chainup/struct-no-gtype-base.bala \
	chainup/struct-simple-no-gtype-base.bala \
	chainup/struct-this.bala \
	chainup/struct-this-foo.bala \
	chainup/bug791785.bala \
	pointers/bug590641.bala \
	methods/array-length-type.bala \
	methods/lambda.bala \
	methods/closures.bala \
	methods/contains.bala \
	methods/extern.bala \
	methods/iterator.bala \
	methods/parameter-fixed-array-initializer.bala \
	methods/parameter-out-free-on-error.bala \
	methods/parameter-ref-array-resize.bala \
	methods/parameter-ref-array-resize-captured.bala \
	methods/parameter-ref-delegate.bala \
	methods/parameter-ref-element-access.bala \
	methods/preconditions-temp-variables.bala \
	methods/prepostconditions.bala \
	methods/prepostconditions-captured.bala \
	methods/postconditions.bala \
	methods/postconditions-temp-variables.bala \
	methods/return-unowned-delegate.bala \
	methods/same-name.bala \
	methods/symbolresolution.bala \
	methods/bug540483.bala \
	methods/bug595538.bala \
	methods/bug596726.bala \
	methods/bug597426.bala \
	methods/bug598738.bala \
	methods/bug599892.bala \
	methods/bug613483.bala \
	methods/bug615450.test \
	methods/bug620673.test \
	methods/bug620673.bala \
	methods/bug622570.bala \
	methods/bug626783.bala \
	methods/bug634753.bala \
	methods/bug639054.bala \
	methods/bug642350.bala \
	methods/bug642885.bala \
	methods/bug642899.bala \
	methods/bug643088.test \
	methods/bug646345.bala \
	methods/bug648030.test \
	methods/bug648320.bala \
	methods/bug649562.bala \
	methods/bug652098.bala \
	methods/bug653391.bala \
	methods/bug653908.bala \
	methods/bug663210.bala \
	methods/bug699956.bala \
	methods/bug710862.bala \
	methods/bug723009.bala \
	methods/bug723195.bala \
	methods/bug726347.bala \
	methods/bug736235.bala \
	methods/bug737222.bala \
	methods/bug743877.bala \
	methods/bug771964.bala \
	methods/bug774060.bala \
	methods/bug775466.test \
	methods/bug781061.bala \
	methods/bug784691.bala \
	methods/bug791215.bala \
	methods/bug791283.bala \
	methods/argument-array-initilizer.bala \
	methods/argument-named.bala \
	methods/delegate-target.bala \
	methods/generics.bala \
	methods/nowrapper-interface.bala \
	methods/nowrapper-no-vfunc.test \
	methods/params-array.bala \
	methods/params-array-abstract.test \
	methods/params-array-with-throws.bala \
	methods/print-attribute.bala \
	methods/print-attribute-invalid.test \
	methods/printf-invalid.test \
	methods/printf-constructor.bala \
	methods/printf-constructor-invalid.test \
	methods/varargs-delegate.bala \
	methods/varargs-delegate-without-target.bala \
	methods/varargs-gvalue.bala \
	methods/varargs-out.bala \
	methods/varargs-ref.bala \
	methods/varargs-struct.bala \
	control-flow/assigned-local-variable.bala \
	control-flow/break.bala \
	control-flow/break-invalid.test \
	control-flow/coalesce-as-argument.bala \
	control-flow/coalesce-execution-order.bala \
	control-flow/coalesce-reference-transfer.bala \
	control-flow/coalesce-right-value.bala \
	control-flow/coalesce-short-circuit.bala \
	control-flow/conditional-as-argument.bala \
	control-flow/continue-invalid.test \
	control-flow/double-catch.test \
	control-flow/expressions-conditional.bala \
	control-flow/finally-return.test \
	control-flow/for.bala \
	control-flow/for-switch-continue.bala \
	control-flow/foreach.bala \
	control-flow/local-clash-with-implicit-this.bala \
	control-flow/missing-break.test \
	control-flow/missing-return.test \
	control-flow/nested-conditional.bala \
	control-flow/pre-post-increment.bala \
	control-flow/pre-post-increment-field.bala \
	control-flow/pre-post-increment-local.bala \
	control-flow/pre-post-increment-parameter.bala \
	control-flow/pre-post-increment-property.bala \
	control-flow/switch.bala \
	control-flow/switch-string.bala \
	control-flow/sideeffects.bala \
	control-flow/unassigned-captured-local-variable.test \
	control-flow/unassigned-local-block-variable.test \
	control-flow/unassigned-local-variable.test \
	control-flow/unassigned-local-variable-2.test \
	control-flow/unassigned-local-variable-3.test \
	control-flow/unassigned-local-variable-while.test \
	control-flow/while-false.bala \
	control-flow/bug628336.bala \
	control-flow/bug639482.bala \
	control-flow/bug652549.bala \
	control-flow/bug661985.bala \
	control-flow/bug665904.bala \
	control-flow/bug691514.bala	\
	control-flow/bug736774-1.bala \
	control-flow/bug736774-2.bala \
	control-flow/bug764440.bala \
	control-flow/bug790903.test \
	control-flow/bug790903-2.test \
	control-semantic/argument-extra.test \
	control-semantic/argument-incompatible-type-out.test \
	control-semantic/argument-incompatible-type-ref.test \
	control-semantic/argument-missing.test \
	control-semantic/argument-named.test \
	control-semantic/argument-no-out.test \
	control-semantic/argument-no-ref.test \
	control-semantic/argument-null-ref.test \
	control-semantic/argument-owned-out.test \
	control-semantic/argument-owned-ref.test \
	control-semantic/argument-value-out.test \
	control-semantic/argument-value-ref.test \
	control-semantic/condition-not-boolean.test \
	control-semantic/expression-not-boolean.test \
	control-semantic/literal-immutable.test \
	control-semantic/member-incompatible-type.test \
	control-semantic/member-invalid.test \
	control-semantic/member-private.test \
	control-semantic/member-readonly.test \
	control-semantic/printf-too-few.test \
	control-semantic/printf-too-many.test \
	control-semantic/this-assignment.test \
	control-semantic/variadic-argument-invalid.test \
	enums/default-gtype.bala \
	enums/enum_only.bala \
	enums/enum-no-gtype.bala \
	enums/enums.bala \
	enums/flags.bala \
	enums/from-0-literal.bala \
	enums/in-inference.bala \
	enums/no_gtype_to_string.bala \
	enums/switch.bala \
	enums/bug666035.bala \
	enums/bug666035-1.test \
	enums/bug666035-2.test \
	enums/bug673879.bala \
	enums/bug763831.bala \
	enums/bug780050.bala \
	structs/cast-struct-boxed.bala \
	structs/struct_only.bala \
	structs/struct-base-types.bala \
	structs/struct-boxed-cast.bala \
	structs/struct-empty-still.test \
	structs/struct-initializer-list-in-array.bala \
	structs/struct-initializer-list-nested.bala \
	structs/struct-no-gtype.bala \
	structs/struct-no-gtype-inherit.bala \
	structs/struct-static-field-initializer.bala \
	structs/struct-static-field-initializer.test \
	structs/struct-static-property-initializer.test \
	structs/structs.bala \
	structs/constructor-wrong-name.test \
	structs/default-gtype.bala \
	structs/gmutex.bala \
	structs/gtype-base-struct.bala \
	structs/gvalue.bala \
	structs/gvalue-implicit-comparison.bala \
	structs/simple-type-constructor.bala \
	structs/simple-type-disposable.test \
	structs/bug530605.bala \
	structs/bug572091.bala \
	structs/bug583603.bala \
	structs/bug595587.bala \
	structs/bug596144.bala \
	structs/bug603056.bala \
	structs/bug606202.bala \
	structs/bug609642.bala \
	structs/bug613513.bala \
	structs/bug613825.bala \
	structs/bug621176.bala \
	structs/bug622422.bala \
	structs/bug623092.bala \
	structs/bug651441.bala \
	structs/bug654646.bala \
	structs/bug654753.bala \
	structs/bug656693.bala \
	structs/bug657378.bala \
	structs/bug658048.bala \
	structs/bug660426.bala \
	structs/bug661945.bala \
	structs/bug667890.bala \
	structs/bug669580.bala \
	structs/bug685177.bala \
	structs/bug686190.bala \
	structs/bug688732.bala \
	structs/bug690380.bala \
	structs/bug694140.bala \
	structs/bug749952.bala \
	structs/bug764041.test \
	structs/bug775761.bala \
	structs/bug777194.bala \
	structs/bug777194-2.bala \
	delegates/casting.bala \
	delegates/compatible.bala \
	delegates/delegate_only.bala \
	delegates/delegate-recusive.bala \
	delegates/delegates.bala \
	delegates/delegates-error.test \
	delegates/error-pos.bala \
	delegates/fields.bala \
	delegates/fields-no-target.bala \
	delegates/gclosure-conversion.bala \
	delegates/incompatible.test \
	delegates/incompatible-assignment.test \
	delegates/incompatible-initializer.test \
	delegates/incompatible-target.test \
	delegates/instance-method-to-no-target.test \
	delegates/instance-method-to-no-target-2.test \
	delegates/lambda-incompatible.test \
	delegates/lambda-mixed-instance-static.bala \
	delegates/lambda-shared-closure.bala \
	delegates/member-target-destroy.bala \
	delegates/reference_transfer.bala \
	delegates/return-array-null-terminated.bala \
	delegates/wrapper.bala \
	delegates/bug519949.test \
	delegates/bug539166.bala \
	delegates/bug595610.bala \
	delegates/bug595639.bala \
	delegates/bug598869.test \
	delegates/bug632017.test \
	delegates/bug638415.bala \
	delegates/bug639751.bala \
	delegates/bug659778.bala \
	delegates/bug683925.bala \
	delegates/bug703804.bala \
	delegates/bug761360.bala \
	delegates/bug772204.test \
	delegates/bug792077.bala \
	objects/chainup.bala \
	objects/class-ccode-cprefix.bala \
	objects/class_only.bala \
	objects/class-destroysinstance.bala \
	objects/class-inner-types.bala \
	objects/class-new-no-override.bala \
	objects/class-vfunc-base-access.bala \
	objects/classes.bala \
	objects/classes-interfaces.bala \
	objects/classes-interfaces-virtuals.bala \
	objects/classes-implicit-implementation.bala \
	objects/compact-class.bala \
	objects/compact-class-destructor.bala \
	objects/compact-class-refcount.bala \
	objects/compact-class-custom-ref.bala \
	objects/constructor-abstract-public.test \
	objects/constructor-inner-error.bala \
	objects/constructor-variadic.test \
	objects/constructor-wrong-name.test \
	objects/constructors.bala \
	objects/destructors.bala \
	objects/duplicating-instance-invalid.test \
	objects/dynamic.bala \
	objects/generics.bala \
	objects/initially-unowned.bala \
	objects/field-leading-digit.test \
	objects/fields.bala \
	objects/gobject-class-lifetime.bala \
	objects/gsource.bala \
	objects/gtype-class-lifetime.bala \
	objects/instance-comparison.bala \
	objects/interface_only.bala \
	objects/interface-async-base-access.bala \
	objects/interface-base-access.bala \
	objects/interface-inner-types.bala \
	objects/interfaces.bala \
	objects/interface-abstract-async-override.bala \
	objects/interface-async-captured-generic.bala \
	objects/interface-generics.bala \
	objects/interface-property-base-access.bala \
	objects/interface-property-base-impl.bala \
	objects/interface-property-delegate.bala \
	objects/interface-property-override.bala \
	objects/interface-virtual-override.bala \
	objects/member-initializer-base-properties.bala \
	objects/member-initializer-property.bala \
	objects/member-initializer-property-owned-setter.bala \
	objects/methods.bala \
	objects/paramspec.bala \
	objects/plugin-module-init.bala \
	objects/properties.bala \
	objects/property-array.bala \
	objects/property-array-length.bala \
	objects/property-base-access.bala \
	objects/property-enum.bala \
	objects/property-notify.bala \
	objects/property-notify-owned-getter.bala \
	objects/property-ownership.bala \
	objects/property-read-only-auto.bala \
	objects/property-read-only-member-write.test \
	objects/property-read-only-write.test \
	objects/property-construct-only.bala \
	objects/property-construct-only-write.test \
	objects/property-construct-only-write-after.test \
	objects/property-construct-only-write-foreign.test \
	objects/property-delegate.bala \
	objects/property-delegate-owned.bala \
	objects/property-gboxed-nullable.bala \
	objects/property-real-struct-assignment.bala \
	objects/property-real-struct-no-accessor.test \
	objects/property-simple-type-struct-nullable.bala \
	objects/property-static.bala \
	objects/property-struct-no-gtype.bala \
	objects/property-write-only-member-read.test \
	objects/regex.bala \
	objects/sealed-abstract-class.test \
	objects/sealed-class.test \
	objects/sealed-compact-class.test \
	objects/signals.bala \
	objects/signals-enum-marshal.bala \
	objects/signals-delegate.bala \
	objects/signals-delegate-parameter.bala \
	objects/signals-dymanic-invalid-handler.test \
	objects/signals-error-marshal.bala \
	objects/signals-fundamental-return.bala \
	objects/signals-gobject-return.bala \
	objects/signals-lambda-delegate.bala \
	objects/signals-prototype-access.bala \
	objects/signals-prototype-access-invalid.test \
	objects/signals-prototype-access-invalid-2.test \
	objects/signals-struct-return.bala \
	objects/singleton.bala \
	objects/test-025.bala \
	objects/test-026.bala \
	objects/test-029.bala \
	objects/test-034.bala \
	objects/bug541728.test \
	objects/bug554329.test \
	objects/bug564011.test \
	objects/bug564090.test \
	objects/bug566909.bala \
	objects/bug574146.test \
	objects/bug585344.test \
	objects/bug587905.test \
	objects/bug588203.bala \
	objects/bug589928.bala \
	objects/bug593137.bala \
	objects/bug593260.bala \
	objects/bug596621.bala \
	objects/bug597155.bala \
	objects/bug597161.bala \
	objects/bug603491.test \
	objects/bug613486.bala \
	objects/bug613840.bala \
	objects/bug620675.bala \
	objects/bug620706.bala \
	objects/bug624594.bala \
	objects/bug626038.bala \
	objects/bug626038-2.bala \
	objects/bug628639.bala \
	objects/bug629593.bala \
	objects/bug631267.bala \
	objects/bug634782.bala \
	objects/bug641418-1.test \
	objects/bug641418-2.test \
	objects/bug641418-3.test \
	objects/bug641828.bala \
	objects/bug642809.bala \
	objects/bug643711.bala \
	objects/bug644938.bala \
	objects/bug646362.bala \
	objects/bug646792.bala \
	objects/bug647018.bala \
	objects/bug653138.bala \
	objects/bug654702.bala \
	objects/bug663134.bala \
	objects/bug664529.bala \
	objects/bug667668.bala \
	objects/bug681356.bala \
	objects/bug683646.bala \
	objects/bug695671.bala \
	objects/bug702736.bala \
	objects/bug702846.bala \
	objects/bug731547.bala \
	objects/bug741465.bala \
	objects/bug751338.bala \
	objects/bug758816.bala \
	objects/bug760031.test \
	objects/bug764481.bala \
	objects/bug767092.test \
	objects/bug768823.test \
	objects/bug773956-1.test \
	objects/bug773956-2.test \
	objects/bug615830-1.test \
	objects/bug615830-2.test \
	objects/bug766739.bala \
	objects/bug778632.bala \
	objects/bug779038-1.test \
	objects/bug779038-2.test \
	objects/bug779038-3.test \
	objects/bug779219.bala \
	objects/bug779955.bala \
	objects/bug783897.bala \
	objects/bug788964.bala \
	objects/bug795225-1.test \
	objects/bug795225-2.test \
	objects/bug795225-3.test \
	objects/bug795225-4.test \
	objects/bug795521.bala \
	errors/catch-error-code.bala \
	errors/catch-in-finally.bala \
	errors/default-gtype.bala \
	errors/errors.bala \
	errors/errorcode.bala \
	errors/errordomain.bala \
	errors/errordomain-instance-method.test \
	errors/errordomain-static-method.bala \
	errors/invalid-type-check.test \
	errors/loops.bala \
	errors/method-throws.bala \
	errors/bug567181.bala \
	errors/bug579101.bala \
	errors/bug596228.bala \
	errors/bug623049.bala \
	errors/bug627090.bala \
	errors/bug639589.bala \
	errors/bug651145.bala \
	errors/bug762377.bala \
	errors/bug778224.bala \
	asynchronous/bug595735.bala \
	asynchronous/bug595755.bala \
	asynchronous/bug596177.bala \
	asynchronous/bug596861.bala \
	asynchronous/bug597294.bala \
	asynchronous/bug598677.bala \
	asynchronous/bug598697.bala \
	asynchronous/bug598698.bala \
	asynchronous/bug599568.bala \
	asynchronous/bug600827.bala \
	asynchronous/bug601558.bala \
	asynchronous/bug612641.bala \
	asynchronous/bug613484.bala \
	asynchronous/bug614294.bala \
	asynchronous/bug620740.bala \
	asynchronous/bug626053.bala \
	asynchronous/bug639591.bala \
	asynchronous/bug640721.bala \
	asynchronous/bug641182.bala \
	asynchronous/bug646945.bala \
	asynchronous/bug652252.bala \
	asynchronous/bug653861.bala \
	asynchronous/bug654336.bala \
	asynchronous/bug654337.bala \
	asynchronous/bug659886.bala \
	asynchronous/bug661961.bala \
	asynchronous/bug710103.bala \
	asynchronous/bug741929.bala \
	asynchronous/bug742621.bala \
	asynchronous/bug762819.bala \
	asynchronous/bug777242.bala \
	asynchronous/bug783543.bala \
	asynchronous/bug792660.bala \
	asynchronous/bug792942.bala \
	asynchronous/bug793158.bala \
	asynchronous/captured-fixed-array.bala \
	asynchronous/catch-error-scope.bala \
	asynchronous/catch-in-finally.bala \
	asynchronous/creation-missing-yield.test \
	asynchronous/closures.bala \
	asynchronous/constructor-argument-check.bala \
	asynchronous/finish-name.bala \
	asynchronous/generator.bala \
	asynchronous/nowrapper.bala \
	asynchronous/out-parameter-free-on-error.bala \
	asynchronous/out-parameter-invalid.test \
	asynchronous/params-array-invalid.test \
	asynchronous/result-pos.bala \
	asynchronous/variadic-invalid.test \
	asynchronous/variadic-invalid-2.test \
	asynchronous/yield.bala \
	generics/arrays-not-supported.test \
	generics/arrays-not-supported-2.test \
	generics/arrays-not-supported-3.test \
	generics/constructor-chain-up.bala \
	generics/floating-type-cast.bala \
	generics/gvariant-serialization.test \
	generics/inference-argument-may-fail.bala \
	generics/inference-static-function.bala \
	generics/integer-member-access.bala \
	generics/integer-type-cast.bala \
	generics/integer-type-cast-return.bala \
	generics/parameter-invalid-initializer.test \
	generics/parameter-sizeof-initializer.bala \
	generics/member-dup-destroy.bala \
	generics/property-int-cast.bala \
	generics/string-literal-comparison.bala \
	generics/type-parameter-properties.bala \
	generics/value-pointer-type-access.bala \
	generics/bug640330.test \
	generics/bug640330.bala \
	generics/bug694765-1.bala \
	generics/bug694765-2.bala \
	generics/bug694765-3.bala \
	dbus/basic-types.test \
	dbus/arrays.test \
	dbus/structs.test \
	dbus/errors.test \
	dbus/async.test \
	dbus/async-bus.test \
	dbus/async-connection.test \
	dbus/async-errors.test \
	dbus/connection.test \
	dbus/dynamic-method.test \
	dbus/enum-string-marshalling.bala \
	dbus/signals.test \
	dbus/filedescriptor.test \
	dbus/filedescriptor-async.test \
	dbus/filedescriptor-errors.test \
	dbus/dicts.test \
	dbus/bug596862.bala \
	dbus/bug602003.test \
	dbus/bug735437.test \
	dbus/bug782719.test \
	dbus/bug783002.test \
	dbus/bug792277.bala \
	dbus/rawvariants.test \
	dbus/interface-info.test \
	gir/bug651773.test \
	gir/bug667751.test \
	gir/bug742012.test \
	gir/bug788775.test \
	gir/bug792998.test \
	gir/alias.test \
	gir/array-fixed-length.test \
	gir/async-creation-method.test \
	gir/async-result-pos.test \
	gir/async-sync-out.test \
	gir/class.test \
	gir/constant.test \
	gir/delegate-alias-without-target.test \
	gir/delegate-array-length-type.test \
	gir/delegate-closure-destroy-index-conflict.test \
	gir/delegate-error-pos.test \
	gir/enum.test \
	gir/errordomain.test \
	gir/gtype-struct-name.test \
	gir/instance-parameter-owned.test \
	gir/method-array-length-type.test \
	gir/method-class.test \
	gir/method-nowrapper.test \
	gir/parameter-array-length-type.test \
	gir/parameter-nullable-out-simple-type.test \
	gir/property-non-readable.test \
	gir/signal-virtual.test \
	gir/symbol-type-csuffix.test \
	gir/union.test \
	gir/union-transparent.test \
	gtktemplate/gtkcallback-incompatible.test \
	gtktemplate/gtkcallback-unknown.test \
	gtktemplate/gtkchild-field-incompatible-type.test \
	gtktemplate/gtkchild-field-unknown.test \
	gtktemplate/gtkchild-property-not-automatic.test \
	gtktemplate/gtkchild-property-unknown.test \
	gtktemplate/gtkchild-without-gtktemplate.test \
	gtktemplate/gtktemplate-gtkwidget-subclass.test \
	annotations/deprecated.bala \
	annotations/deprecated-delegate-minimal.bala \
	annotations/deprecated-enum-minimal.bala \
	annotations/deprecated-method-minimal.bala \
	annotations/deprecated-property-minimal.bala \
	annotations/deprecated-struct-minimal.bala \
	annotations/description.bala \
	annotations/noaccessormethod.test \
	scanner/comment-not-closed.test \
	scanner/preprocessor-invalid.test \
	scanner/preprocessor-missing-paren.test \
	scanner/preprocessor-unexpected.test \
	scanner/regex-escape-invalid.test \
	scanner/regex-escape-u-digit-length.test \
	scanner/regex-escape-u-empty.test \
	scanner/regex-escape-x-digit-length.test \
	scanner/regex-escape-x-empty.test \
	scanner/regex-escape-x.bala \
	scanner/regex-multiple-i.test \
	scanner/regex-multiple-m.test \
	scanner/regex-multiple-s.test \
	scanner/regex-multiple-x.test \
	scanner/string-escape-u-digit-length.test \
	scanner/string-escape-u-empty.test \
	scanner/string-escape-x-digit-length.test \
	scanner/string-escape-x-empty.test \
	scanner/string-escape-x.bala \
	parser/argument-list-incomplete.test \
	parser/array-creation-invalid.test \
	parser/assignment.bala \
	parser/attribute-duplicate.test \
	parser/attribute-missing-literal.test \
	parser/attribute-wrong-number.test \
	parser/block-delimiter-missing.test \
	parser/constant-owned.test \
	parser/constant-local-owned.test \
	parser/constructor-class-exists.test \
	parser/constructor-exists.test \
	parser/constructor-no-new.test \
	parser/constructor-no-static-class.test \
	parser/constructor-static-exists.test \
	parser/continue-statement.bala \
	parser/creation-no-abstract.test \
	parser/creation-no-new.test \
	parser/creation-no-override.test \
	parser/creation-no-virtual.test \
	parser/declaration-embedded.test \
	parser/delegate-anonymous.test \
	parser/delegate-no-new.test \
	parser/destructor-class-exists.test \
	parser/destructor-exists.test \
	parser/destructor-no-new.test \
	parser/destructor-no-static-class.test \
	parser/destructor-static-exists.test \
	parser/destructor-wrong-name.test \
	parser/do-statement.bala \
	parser/expect-endbrace.test \
	parser/expect-error.test \
	parser/field-no-abstract.test \
	parser/field-no-override.test \
	parser/field-no-static-class.test \
	parser/field-no-virtual.test \
	parser/foreach.bala \
	parser/foreach-no-type.test \
	parser/function-syntax-error.test \
	parser/initializer-list-incomplete.test \
	parser/inner-array-size.test \
	parser/invalid-brace.test \
	parser/invalid-statement-delimiter.test \
	parser/local-variable.bala \
	parser/lock-statement.bala \
	parser/main-block.bala \
	parser/member-access-pointer.bala \
	parser/method-no-abstract-override.test \
	parser/method-no-abstract-virtual-override.test \
	parser/method-no-abstract-virtual.test \
	parser/method-no-class-abstract.test \
	parser/method-no-class-override.test \
	parser/method-no-class-virtual.test \
	parser/method-no-static-abstract.test \
	parser/method-no-static-class.test \
	parser/method-no-static-override.test \
	parser/method-no-static-virtual.test \
	parser/method-no-virtual-override.test \
	parser/namespaces.bala \
	parser/namespace-missing-bracket.test \
	parser/preprocessor.bala \
	parser/preprocessor-glib.bala \
	parser/preprocessor-bala.bala \
	parser/property-default-redefined.test \
	parser/property-get-must-have-body.test \
	parser/property-get-redefined.test \
	parser/property-get-set-construct.test \
	parser/property-no-abstract-override.test \
	parser/property-no-abstract-virtual.test \
	parser/property-no-abstract-virtual-override.test \
	parser/property-no-static-class.test \
	parser/property-no-virtual-override.test \
	parser/property-set-must-have-body.test \
	parser/property-set-redefined.test \
	parser/qualified-member-access.bala \
	parser/qualified-symbol-access.bala \
	parser/signal-no-class.test \
	parser/signal-no-static.test \
	parser/statement-outside-root.test \
	parser/switch-statement.bala \
	parser/template.bala \
	parser/tuple.bala \
	parser/unsupported-property-async.test \
	parser/unsupported-property-throws.test \
	parser/using-ambiguous-reference.test \
	parser/using-directive.bala \
	parser/using-invalid-namespace.test \
	parser/yield-method.test \
	parser/yield-return.test \
	parser/yield-return.bala \
	parser/bug728574.bala \
	parser/bug749576.bala \
	resolver/class-base-cycle.test \
	resolver/interface-prerequisite-cycle.test \
	resolver/struct-base-cycle.test \
	ordering/delegate-class.bala \
	ordering/delegate-enum.bala \
	ordering/delegate-interface.bala \
	ordering/delegate-struct.bala \
	ordering/struct-delegate.bala \
	semantic/address-of-invalid.test \
	semantic/array-stacked.test \
	semantic/array-incompatible-initializer.test \
	semantic/array-incompatible-initializer2.test \
	semantic/array-invalid-type-argument.test \
	semantic/array-too-few-type-arguments.test \
	semantic/array-too-many-type-arguments.test \
	semantic/assignment-element-incompatible-ownership.test \
	semantic/assignment-element-incompatible-type.test \
	semantic/assignment-fixed-array-length.test \
	semantic/assignment-same-variable.bala \
	semantic/assignment-signal-incompatible-method.test \
	semantic/assignment-signal-incompatible-type.test \
	semantic/cast-gvalue-unsupported.test \
	semantic/cast-gvariant-unsupported.test \
	semantic/chainup-gobject-incompatible-type-property.test \
	semantic/chainup-gobject-unknown-property.test \
	semantic/chainup-gobject-unsupported-type-property.test \
	semantic/class-base-type-invalid.test \
	semantic/class-base-type-less-accessible.test \
	semantic/class-base-type-multiple.test \
	semantic/class-compact-field-class.test \
	semantic/class-compact-field-lock.test \
	semantic/class-compact-field-private.test \
	semantic/class-compact-derived-instance-field.test \
	semantic/class-compact-interface.test \
	semantic/class-compact-method-baseaccess.test \
	semantic/class-compact-property-baseaccess.test \
	semantic/class-missing-implement-interface-method.test \
	semantic/class-missing-implement-interface-property.test \
	semantic/class-missing-implement-interfaces-methods.test \
	semantic/class-missing-implement-interfaces-methods2.test \
	semantic/class-missing-implement-interfaces-methods3.test \
	semantic/class-missing-implement-method.test \
	semantic/class-missing-implement-property.test \
	semantic/class-missing-prerequisites.test \
	semantic/class-singleton-base.test \
	semantic/class-singleton-non-gobject.test \
	semantic/class-too-few-type-arguments.test \
	semantic/class-too-many-type-arguments.test \
	semantic/conditional-expression-incompatible.test \
	semantic/conditional-expression-no-block.test \
	semantic/constant-extern.test \
	semantic/constant-pointer.test \
	semantic/constant-reassignment-element.test \
	semantic/constant-reassignment-member.test \
	semantic/constant-value.test \
	semantic/constant-value-missing.test \
	semantic/constant-value-type.test \
	semantic/constant-void.test \
	semantic/construct-without-gobject.test \
	semantic/creation-error-accessibility.test \
	semantic/creation-method-enum.test \
	semantic/creation-method-errordomain.test \
	semantic/creation-method-interface.test \
	semantic/creation-method-namespace.test \
	semantic/delegate-error-accessibility.test \
	semantic/delegate-return-valist.test \
	semantic/delegate-too-few-type-arguments.test \
	semantic/delegate-too-many-type-arguments.test \
	semantic/delete-unsupported.test \
	semantic/element-access-index-invalid.test \
	semantic/enum-empty.test \
	semantic/errordomain-empty.test \
	semantic/field-accessibility.test \
	semantic/field-compact-static.test \
	semantic/field-external.test \
	semantic/field-incompatible.test \
	semantic/field-interface.test \
	semantic/field-namespace-owned.test \
	semantic/field-non-constant.test \
	semantic/field-owned-to-unowned.test \
	semantic/field-static-instance-access.test \
	semantic/field-valist.test \
	semantic/field-void.test \
	semantic/floating-reference.bala \
	semantic/floating-reference-base-method.bala \
	semantic/floating-reference-error.bala \
	semantic/foreach-iterator-args.test \
	semantic/foreach-iterator-element-owned.test \
	semantic/foreach-iterator-void.test \
	semantic/foreach-iterator-wrong-types.test \
	semantic/foreach-missing-generic-type.test \
	semantic/foreach-missing-iterator.test \
	semantic/foreach-missing-next-value.test \
	semantic/foreach-next-args.test \
	semantic/foreach-next-get-args.test \
	semantic/foreach-next-get-void.test \
	semantic/foreach-next-missing-get.test \
	semantic/foreach-next-value-args.test \
	semantic/foreach-next-value-void.test \
	semantic/foreach-next-void.test \
	semantic/foreach-wrong-types.test \
	semantic/initializer-unknown-type.test \
	semantic/interface-prerequisite-invalid.test \
	semantic/interface-prerequisite-less-accessible.test \
	semantic/interface-prerequisite-multiple.test \
	semantic/literal-expression.test \
	semantic/localvariable-owned-to-unowned.test \
	semantic/localvariable-var-pointer-initializer.bala \
	semantic/localvariable-var-static-access-instance-field.test \
	semantic/localvariable-var-static-access-instance-method.test \
	semantic/localvariable-var-static-access-instance-property.test \
	semantic/localvariable-var-without-initializer.test \
	semantic/localvariable-void.test \
	semantic/localvariable-void-initializer.test \
	semantic/member-access-async-callback-invalid.test \
	semantic/member-access-capture-out.test \
	semantic/member-access-capture-valist-parameter.test \
	semantic/member-access-capture-valist-variable.test \
	semantic/member-access-protected-invalid.test \
	semantic/member-access-undefined.test \
	semantic/member-access-static-with-instance.bala \
	semantic/member-access-static-transformed-qualified.bala \
	semantic/member-access-transformed-qualified.bala \
	semantic/method-abstract.test \
	semantic/method-abstract-body.test \
	semantic/method-async-ref-parameter.test \
	semantic/method-body.test \
	semantic/method-class-abstract.test \
	semantic/method-derived-compact.test \
	semantic/method-error-accessibility.test \
	semantic/method-extern-abstract.test \
	semantic/method-extern-body.test \
	semantic/method-extern-virtual.test \
	semantic/method-interface-already-found.test \
	semantic/method-interface-not-found.test \
	semantic/method-main-async.test \
	semantic/method-main-inline.test \
	semantic/method-main-throws.test \
	semantic/method-override.test \
	semantic/method-postcondition.test \
	semantic/method-precondition.test \
	semantic/method-private-abstract.test \
	semantic/method-private-override.test \
	semantic/method-private-virtual.test \
	semantic/method-protected.test \
	semantic/method-return-accessibility.test \
	semantic/method-return-valist.test \
	semantic/method-too-few-type-arguments.test \
	semantic/method-too-many-type-arguments.test \
	semantic/method-virtual.test \
	semantic/method-virtual-body.test \
	semantic/methodcall-field-initializer-throws.test \
	semantic/methodcall-invalid-argument-lambda.test \
	semantic/methodcall-void-expression.test \
	semantic/methodcall-yield-with-begin.test \
	semantic/objectcreation-abstract-class.test \
	semantic/objectcreation-field-initializer-throws.test \
	semantic/objectcreation-no-creation-method.test \
	semantic/objectcreation-non-public-constructor.test \
	semantic/objectcreation-unsupported-type.test \
	semantic/parameter-accessibility.test \
	semantic/parameter-default-invalid.test \
	semantic/parameter-default-type.test \
	semantic/parameter-out-default.test \
	semantic/parameter-params.test \
	semantic/parameter-ref-default.test \
	semantic/parameter-void.test \
	semantic/params-array-multiple.test \
	semantic/params-array-objectcreation-multiple.test \
	semantic/params-array-objectcreation-struct-length.test \
	semantic/params-array-struct-length.test \
	semantic/pointer-indirection-type-not-supported.test \
	semantic/pointer-indirection-void-not-supported.test \
	semantic/property-abstract.test \
	semantic/property-abstract-derived-compact.test \
	semantic/property-accessibility.test \
	semantic/property-construct.test \
	semantic/property-initializer-type.test \
	semantic/property-method-returns-modified-pointer.test \
	semantic/property-override.test \
	semantic/property-override-class.test \
	semantic/property-override-interface.test \
	semantic/property-static-instance-access.test \
	semantic/property-struct-abstract.test \
	semantic/property-struct-override.test \
	semantic/property-struct-protected.test \
	semantic/property-struct-virtual.test \
	semantic/property-void.test \
	semantic/reference-transfer-not-supported.test \
	semantic/reference-transfer-unavailable.test \
	semantic/return-in-nonvoid.test \
	semantic/return-in-void.test \
	semantic/return-missing-ownership.test \
	semantic/return-missing-transfer.test \
	semantic/signal-clash-inherited.test \
	semantic/signal-compact-class.test \
	semantic/signal-detail-invalid.test \
	semantic/signal-detail-non-string.test \
	semantic/struct-derived.test \
	semantic/signal-disconnect-empty-invalid.test \
	semantic/signal-disconnect-invalid.test \
	semantic/signal-return-valist.test \
	semantic/struct-field-initializer.test \
	semantic/struct-invalid-base.test \
	semantic/struct-recursive.test \
	semantic/struct-recursive-in-struct.test \
	semantic/switch-duplicate-label.test \
	semantic/switch-label-not-compatible.test \
	semantic/switch-label-not-constant.test \
	semantic/switch-type-unsupported.test \
	semantic/throw-no-error-type.test \
	semantic/throw-unknown-error-type.test \
	semantic/type-argument-ownership-mismatch.test \
	semantic/unary-invalid-instance-member-access.test \
	semantic/unary-unsupported-complement.test \
	semantic/unary-unsupported-increment.test \
	semantic/unary-unsupported-minus.test \
	semantic/unary-unsupported-negation.test \
	semantic/unary-unsupported-out-ref.test \
	semantic/yield-call-requires-async-context.test \
	semantic/yield-call-requires-async-method.test \
	semantic/yield-call-requires-async-method-2.test \
	semantic/yield-creation-requires-async-context.test \
	semantic/yield-creation-requires-async-method.test \
	semantic/yield-statement-requires-async-context.test \
	nullability/bug611223.bala \
	nullability/local-variable-invalid-convert.test \
	nullability/member-access-nullable-instance.test \
	nullability/method-parameter-invalid-convert.test \
	nullability/method-return-invalid-convert.test \
	nullability/string-concat.test \
	version/since-constant.test \
	version/since-field.test \
	version/since-local-variable.test \
	version/since-method.test \
	version/since-parameter.test \
	genie/class.gs \
	genie/control-flow-if-do.gs \
	genie/control-flow-if-else.gs \
	genie/control-flow-if-else-if.gs \
	genie/control-flow-if-greater-than.gs \
	genie/control-flow-if.gs \
	genie/control-flow-if-identity.gs \
	genie/control-flow-if-less-than.gs \
	genie/enum.gs \
	genie/enum-with-keyword-values.gs \
	genie/function.gs \
	genie/function-returns-closure.gs \
	genie/function-with-argument.gs \
	genie/function-with-return-value.gs \
	genie/indentation-with-spaces.gs \
	genie/init.gs \
	genie/init-int.gs \
	genie/literal-boolean-assignment.gs \
	genie/literal-boolean.gs \
	genie/literal-character.gs \
	genie/literal-hexadecimal.gs \
	genie/literal-integer.gs \
	genie/literal-integer-long-long-suffix.gs \
	genie/literal-null.gs \
	genie/literal-octal.gs \
	genie/literal-real.gs \
	genie/literal-regex.gs \
	genie/literal-template-string.gs \
	genie/literal-verbatim-string.gs \
	genie/operator-addition.gs \
	genie/operator-assignment-combined.gs \
	genie/operator-assignment.gs \
	genie/operator-bitwise-and.gs \
	genie/operator-bitwise-left-shift.gs \
	genie/operator-bitwise-not.gs \
	genie/operator-bitwise-or.gs \
	genie/operator-bitwise-right-shift.gs \
	genie/operator-bitwise-xor.gs \
	genie/operator-division.gs \
	genie/operator-equal.gs \
	genie/operator-greater-than-equal.gs \
	genie/operator-less-than-equal.gs \
	genie/operator-less-than.gs \
	genie/operator-logical-and.gs \
	genie/operator-logical-not.gs \
	genie/operator-logical-or.gs \
	genie/operator-modulo.gs \
	genie/operator-multiply.gs \
	genie/operator-not-equal.gs \
	genie/operator-post-decrement.gs \
	genie/operator-post-increment.gs \
	genie/operator-pre-decrement.gs \
	genie/operator-pre-increment.gs \
	genie/operators-greater-than.gs \
	genie/operator-subtraction.gs \
	genie/operator-ternary.gs \
	genie/preparser-and-expression.gs \
	genie/preparser-elif.gs \
	genie/preparser-equality-expression.gs \
	genie/preparser.gs \
	genie/preparser-not.gs \
	genie/preparser-or-expression.gs \
	genie/struct.gs \
	genie/struct-after-class.gs \
	$(LINUX_TESTS) \
	$(NULL)

LINUX_TESTS = $(NULL)

if HAVE_LINUX
LINUX_TESTS += \
	linux/bug793444.bala \
	linux/file-commandpipe.bala \
	posix/arrays.bala \
	posix/empty-length-0.bala \
	posix/string-concat.bala \
	posix/struct_only.bala \
	posix/delegate_only.bala \
	posix/enum_only.bala \
	posix/enum-to-string.bala \
	$(NULL)
endif

EXTRA_DIST = \
	gtktemplate/tests-extra-environment.sh \
	linux/tests-extra-environment.sh \
	nullability/tests-extra-environment.sh \
	posix/tests-extra-environment.sh \
	version/glib-2.0.pc \
	version/tests-extra-environment.sh \
	$(TESTS) \
	$(LINUX_TESTS) \
	$(NULL)
